# rnn-lstm-practice

./: README.md  main.py  pyproject.toml  text_classification.ipynb
