[tool.poetry]
name = "python-starter"
version = "0.1.0"
description = ""
authors = ["YadaYuki <yada.yuki@fuji.waseda.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
tensorflow = "^2.6.0"
Janome = "^0.4.1"
beautifulsoup4 = "^4.10.0"
gensim = "^4.1.2"
sklearn = "^0.0"
pandas = "1.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
